--- a/src/ui/czi-cust-style-numbered.css
+++ b/src/ui/czi-cust-style-numbered.css
@@ -170,7 +170,7 @@ html {
 
 /* List style counter */
 
-.ProseMirror p[data-style-level='1'][hide-style-level='false'] {
+.ProseMirror p[data-style-level='1'] {
   counter-increment: C1;
 
   /* Reset all other variables under the current one. */
@@ -178,7 +178,7 @@ html {
   margin-left: 12pt;
 }
 
-.ProseMirror p[data-style-level='2'][hide-style-level='false'] {
+.ProseMirror p[data-style-level='2'] {
   counter-increment: C2;
 
   /* Reset all other variables under the current one. */
@@ -186,7 +186,7 @@ html {
   margin-left: 16pt;
 }
 
-.ProseMirror p[data-style-level='3'][hide-style-level='false'] {
+.ProseMirror p[data-style-level='3'] {
   counter-increment: C3;
 
   /* Reset all other variables under the current one. */
@@ -194,7 +194,7 @@ html {
   margin-left: 25pt;
 }
 
-.ProseMirror p[data-style-level='4'][hide-style-level='false'] {
+.ProseMirror p[data-style-level='4'] {
   counter-increment: C4;
 
   /* Reset all other variables under the current one. */
@@ -202,7 +202,7 @@ html {
   margin-left: 37pt;
 }
 
-.ProseMirror p[data-style-level='5'][hide-style-level='false'] {
+.ProseMirror p[data-style-level='5'] {
   counter-increment: C5;
 
   /* Reset all other variables under the current one. */
@@ -210,7 +210,7 @@ html {
   margin-left: 46pt;
 }
 
-.ProseMirror p[data-style-level='6'][hide-style-level='false'] {
+.ProseMirror p[data-style-level='6'] {
   counter-increment: C6;
 
   /* Reset all other variables under the current one. */
@@ -218,7 +218,7 @@ html {
   margin-left: 56pt;
 }
 
-.ProseMirror p[data-style-level='7'][hide-style-level='false'] {
+.ProseMirror p[data-style-level='7'] {
   counter-increment: C7;
 
   /* Reset all other variables under the current one. */
@@ -226,7 +226,7 @@ html {
   margin-left: 65pt;
 }
 
-.ProseMirror p[data-style-level='8'][hide-style-level='false'] {
+.ProseMirror p[data-style-level='8'] {
   counter-increment: C8;
 
   /* Reset all other variables under the current one. */
@@ -234,7 +234,7 @@ html {
   margin-left: 73pt;
 }
 
-.ProseMirror p[data-style-level='9'][hide-style-level='false'] {
+.ProseMirror p[data-style-level='9'] {
   counter-increment: C9;
 
   /* Reset all other variables under the current one. */
@@ -242,7 +242,7 @@ html {
   margin-left: 85pt;
 }
 
-.ProseMirror p[data-style-level='10'][hide-style-level='false'] {
+.ProseMirror p[data-style-level='10'] {
   counter-increment: C10;
   margin-left: 92pt;
 }
@@ -428,6 +428,10 @@ html {
 
 .ProseMirror p[data-bullet-symbol='✪✪ ']::before {
   margin-left: -20pt;
+}
+
+.ProseMirror p[hideNumbering='true'] {
+  margin-left: 0 !important; 
 }
 
 .ProseMirror p[hideNumbering='true']::before {
