IssueFix: Prefix caused the indents not to be changed.

--- a/src/ui/czi-cust-style-numbered.css
+++ b/src/ui/czi-cust-style-numbered.css
@@ -431,9 +431,9 @@ html {
 }
 
 .ProseMirror p[hideNumbering='true'] {
-  margin-left: 0 !important; 
+  margin-left: 0 !important;
 }
 
 .ProseMirror p[hideNumbering='true']::before {
-  visibility: hidden;
+  content: none !important;
 }
