style fix for button

--- a/src/ui/custom-style-edit.css
+++ b/src/ui/custom-style-edit.css
@@ -391,3 +391,8 @@ div[disabled='disabled'] {
 .czi-editor-frameset .molsp-hierarchydiv .formatting-legend {
   all: unset;
 }
+
+.czi-editor-frameset .noButton {
+  border: none;
+  background-color: inherit;
+}
