--- a/src/ui/custom-dropdown.css
+++ b/src/ui/custom-dropdown.css
@@ -22,7 +22,8 @@
 .czi-editor-frameset .molsp-stylenames {
   max-height: 205px;
   min-height: 28px;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .czi-editor-frameset .molsp-stylenames-hr {
@@ -105,4 +106,34 @@
 
 .czi-editor-frameset .stylemenu-backgroundcolor {
   background-color: yellow;
+} 
+
+.czi-editor-frameset .tooltip-wrapper {
+  position: relative;
+  display: inline-block;
 }
+
+.czi-editor-frameset .custom-tooltip {
+  visibility: hidden; 
+  opacity: 0;
+  position: fixed;
+  background-color: #333;
+  color: #fff;
+  padding: 6px 10px;
+  border-radius: 4px;
+  white-space: nowrap;
+  z-index: 11;
+  transition: opacity 0.3s;
+  margin-top: 25px;
+  margin-left: -20px;
+}
+  
+.czi-editor-frameset .tooltip-wrapper:hover .custom-tooltip {
+  visibility: visible;
+  opacity: 1;
+}
+ 
+.czi-editor-frameset .tooltip-text {
+  text-decoration: underline;
+}
+
